# repo2notebook

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  constants.py  generate_constants.py  pyproject.toml  repo2notebook-wrapper.sh  repo2notebook.py
tests/: README.md  __init__.py  run_tests.sh
tests/debug/: list_python_included.py  list_wrapper_included.sh
tests/integration/: __init__.py  test_complex_scenarios.py
tests/unit/: __init__.py  test_binary_detection.py  test_constants_sync.py  test_exclude_patterns.py  test_excluded_report.py  test_oversized_files.py  test_token_counting.py  test_will_be_excluded.sh
